# fusion3d

codigo/: CMakeLists.txt  README  TODO  advancing_front.hpp  doxyfile  filter.hpp  functions.hpp  fusion_3d.hpp  pairwise_alignment_kmeans.hpp  pairwise_alignment_sc.hpp  refine.hpp  surfel.hpp  util.hpp
codigo/alineacion/: CMakeLists.txt  main.cpp
codigo/correspondence/: CMakeLists.txt  main.cpp
codigo/features/: brisk.cpp  features.cpp  iss.cpp  multiscale.cpp  narf.cpp  normals.cpp  pfh.cpp  trajkovic.cpp
codigo/filter/: CMakeLists.txt  filter.py  main.cpp
codigo/ground_truth/: CMakeLists.txt  main.cpp
codigo/hole_filling/: CMakeLists.txt  main.cpp
codigo/icp_second_season/: main.cpp
codigo/integral.fusion/: diff.cpp  fusion.cpp
codigo/integral.registration/: main.cpp  sac.cpp
codigo/keypoints/: CMakeLists.txt  main.cpp
codigo/loop_correction/: main.cpp
codigo/pcd2ply/: CMakeLists.txt  main.cpp
codigo/poisson/: CMakeLists.txt  example.cpp  main.cpp
codigo/quat2rotmat/: main.cpp
codigo/registracion/: CMakeLists.txt  normal_distribution_transform.cpp  registration.cpp  skeleton.cpp  test.cpp
codigo/rotacion/: CMakeLists.txt  main.cpp
codigo/show_transformation/: main.cpp
codigo/smooth/: CMakeLists.txt  main.cpp  mls.cpp
codigo/stanford_database/: CMakeLists.txt  main.cpp
codigo/stats/: CMakeLists.txt  main.cpp
codigo/surface/: CMakeLists.txt  main.cpp  surface.cpp
codigo/tessellation/: CMakeLists.txt  advancing_front.hpp  main.cpp
codigo/tests/: fitness.cpp  fitness.sh  main.cpp  reg_error.sh
codigo/transformation/: CMakeLists.txt  partial.cpp
codigo/triangulation/: CMakeLists.txt  filter.py  main.cpp
codigo/view/: CMakeLists.txt  fpfh.cpp  main.cpp  transformation.cpp
codigo/visual/: CMakeLists.txt  hole.cpp  main.cpp
informe/: base_de_datos.md  brisk.md  casos_de_uso.md  informe_bibliografico.md  keypoins.md  probabilistic_visibility_for_multi-view_stereo.md  zippered.md
informe/1/: biblio.bib  main.tex  (+5 more)
informe/final/code/: CMakeLists.txt  adv_front.cpp  fitness.cpp  fusion.cpp  holes.cpp  loop.cpp  pairwise_icp.cpp  pairwise_reg.cpp  poisson.cpp  preproceso.cpp
papers/: papers.xml
(+145 files in other folders)
